# ml-pm25-prediction-using-classification

data-scrapping-src/: README.md  holidayLocal.py  holidays.py  main.py  nepal_holidays_2020_1_to_2025_4_with_weekends.csv  nepal_holidays_2025_4_to_2025_5.csv  nepal_holidays_2025_4_to_2025_5_with_weekends.csv  pyproject.toml
ml-src/: ML_AQ_PART_1_EDA.ipynb  ML_AQ_PART_2_DATA_CLEAN_AND_COMPILE.ipynb  ML_AQ_PART_3_MODEL_PIPELINES.ipynb
ml-src/datasets/: kathmandu_aq_bhaisepati_till_2025_5.csv  kathmandu_aq_us_embassy_till_2025_4.csv  kathmandu_weather_2025_4_to_2025_5.csv  kathmandu_weather_2025_4_to_2025_5_parallel_20250531_130107.csv  nepal_holidays_2020_1_to_2025_4.csv
ml-src/datasets/compiled/: ktm_pm25_class_2020_1_to_2025_4_dataset.csv  ktm_pm25_class_2025_4_to_2025_5_dataset.csv
webapp/: app.py  main.py
webapp-src/: app.py  main.py  pyproject.toml
webapp-src/model_pipelines/: X_train_columns.pkl  label_encoder.pkl  rf_validation_accuracy.pkl  xgboost_pipeline.pkl
webapp/data/: kathmandu_pm25_class_2025_4_to_2025_5_dataset.csv
webapp/model_pipelines/: xgb_validation_accuracy.pkl
